--- a/_layouts/top.html
+++ b/_layouts/top.html
@@ -58,8 +58,8 @@
 
       <footer>
         <div class="pull-left">
-          <strong>Pabitra Mitra</strong>
-          (<a href="mailto:pabitra@cse.iitkgp.ernet.in?subject=[CS 60050]">pabitra@cse.iitkgp.ernet.in</a>).
+          <strong>KGPML</strong>
+          (<a href="mailto:machinelearning.kgp@gmail.com?subject=[CS 60050]">machinelearning.kgp@gmail.com</a>).
         </div>
         <div class="pull-right">
           Last compiled {{ site.time | date_to_rfc822 }}.
