Bold the field titles.

--- a/_includes/cs60050_head.html
+++ b/_includes/cs60050_head.html
@@ -10,17 +10,17 @@
       <hr/>
     <div class="col-xs-5 col-sm-6 col-md-6 col-lg-6">
       <p>
-        Location: NR-222, Nalanda Complex<br/>
-        Lecture: MTF 5pm - 6pm<br/>
-        Course material: <a href="https://github.com/cs60050">GitHub</a><br/>
-        Discussion: <a href="">Moodle</a><br/>
+        <b>Location</b>: NR-222, Nalanda Complex<br/>
+        <b>Lecture</b>: MTF 5pm - 6pm<br/>
+        <b>Course material</b>: <a href="https://github.com/cs60050">GitHub</a><br/>
+        <b>Discussion</b>: <a href="">Moodle</a><br/>
       </p>
     </div>
     <div class="col-xs-7 col-sm-6 col-md-6 col-lg-6">
       <p>
-        Lecturer: Pabitra Mitra<br/>
-        Email: <a href="mailto:pabitra@cse.iitkgp.ernet.in?subject=[CS 60050]">pabitra@cse.iitkgp.ernet.in</a><br/>
-        OH : Tuesday: 6pm - 7pm, Dept. of CSE<br/>
+        <b>Lecturer</b>: Pabitra Mitra<br/>
+        <b>Email</b>: <a href="mailto:pabitra@cse.iitkgp.ernet.in?subject=[CS 60050]">pabitra@cse.iitkgp.ernet.in</a><br/>
+        <b>Office Hours</b> : Tuesday: 6pm - 7pm, Dept. of CSE<br/>
      <br/>
       </p>
     </div>
